# epi4you

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: pages.yml
docs/: .gitignore  Dockerfile.docs  Makefile  make.bat
docs/source/: architecture.rst  archive-format.rst  cli.rst  conf.py  developer-docs.rst  index.rst  quickstart.rst  training-courses.rst  why-epi4you.rst
src/: app_db.rs  bundle.rs  dataframe.rs  depme_nextflow.rs  docker.rs  epi2me_db.rs  epi2me_desktop_analysis.rs  epi2me_tar.rs  epi2me_workflow.rs  epi4you.rs  epi4you_errors.rs  importer.rs  json.rs  main.rs  manifest.rs  nextflow.rs  nextflow_log_parser.rs  provenance.rs  settings.rs  tempdir.rs  workflow.rs  xdocker.rs  ximporter.rs  xmanifest.rs  xnf_parser.rs  xworkflows.rs
src/create_2me/: create_from_cli_run.rs  create_from_nf_artefact.rs
src/importer/: import_from_2me.rs
src/nextflow/: nextflow_analysis.rs  nextflow_artefact.rs  nextflow_log_item.rs  nextflow_progress.rs  nextflow_toolkit.rs
