[package]
name = "epi4you"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.6"
clap-cargo = "0.13.0"
home = "0.5.5"
serde_json = "1.0.107"
serde = { version = "1.0.107", features = ["derive"] }
rusqlite = { version = "0.29.0", features = ["chrono"] }
chrono = "0.4.31"
polars = { version = "0.33.2", features = ["lazy", "is_in", "strings"] }
polars-core = "0.33.2"
tar = "0.4.40"
csv = "1.3"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
whoami = "1.4.1"
