[package]
name = "epi4you"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.6"
clap-cargo = "0.13.0"
home = "0.5.5"
serde_json = "1.0.107"
serde = { version = "1.0.107", features = ["derive"] }
rusqlite = { version = "0.29.0", features = ["chrono", "bundled"] }
chrono = "0.4.31"
polars = { version = "0.33.2", features = ["lazy", "is_in", "strings"] }
polars-core = "0.33.2"
tar = "0.4.40"
csv = "1.3"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
whoami = "1.4.1"
glob = "0.3.1"
data-encoding = "2.4.0"
ring = "0.17.4"
stringreader = "0.1.1"
ulid = "1.1.0"
fs_extra = "1.3.0"
regex = "1.10.2"
docker-api = "0.14.0"
futures = "0.3.29"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
path-clean = "1.0.1"
