[package]
name = "epi4you"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = "4.4.6"
clap-cargo = "0.13.0"
csv = "1.3"
data-encoding = "2.4.0"
docker-api = "0.14.0"
fs_extra = "1.3.0"
futures = "0.3.29"
glob = "0.3.1"
home = "0.5.5"
path-clean = "1.0.1"
polars = { version = "0.33.2", features = ["lazy", "is_in", "strings", "rows"] }
polars-core = "0.33.2"
regex = "1.10.2"
ring = "0.17.4"
rusqlite = { version = "0.29.0", features = ["chrono", "bundled"] }
serde_json = "1.0.107"
serde = { version = "1.0.107", features = ["derive"] }
stringreader = "0.1.1"
tar = "0.4.40"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.0"
ulid = "1.1.0"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
walkdir = "2.4.0"
whoami = "1.4.1"
